Initial implementation of domain-key library
- Core domain key types and functionality
- Performance-focused with multiple hash backends
- Complete project infrastructure and CI
- Examples and documentation framework
- Ready for community feedback and contributions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -16,36 +17,28 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        rust: [1.70, stable, beta, nightly]
+        rust: [1.70, stable, beta]
         features:
           - ""
           - "--features std"
           - "--features std,serde"
-          - "--features fast"
-          - "--features secure"
-          - "--features crypto"
-          - "--features optimized"
-          - "--features max-performance"
+          - "--features fast,std,serde"
+          - "--features secure,std,serde"
+          - "--features crypto,std,serde"
         exclude:
           # Reduce matrix size - only test feature combinations on stable
           - rust: 1.70
-            features: "--features fast"
+            features: "--features fast,std,serde"
           - rust: 1.70
-            features: "--features secure"
+            features: "--features secure,std,serde"
           - rust: 1.70
-            features: "--features crypto"
+            features: "--features crypto,std,serde"
           - rust: beta
-            features: "--features fast"
+            features: "--features fast,std,serde"
           - rust: beta
-            features: "--features secure"
+            features: "--features secure,std,serde"
           - rust: beta
-            features: "--features crypto"
-          - rust: nightly
-            features: "--features fast"
-          - rust: nightly
-            features: "--features secure"
-          - rust: nightly
-            features: "--features crypto"
+            features: "--features crypto,std,serde"
 
     runs-on: ${{ matrix.os }}
 
@@ -64,10 +57,10 @@ jobs:
           key: ${{ matrix.os }}-${{ matrix.rust }}-${{ hashFiles('Cargo.toml') }}
 
       - name: Run tests
-        run: cargo test --verbose --no-default-features ${{ matrix.features }}
+        run: cargo test --verbose ${{ matrix.features }}
 
       - name: Run doctests
-        run: cargo test --doc --no-default-features ${{ matrix.features }}
+        run: cargo test --doc ${{ matrix.features }}
 
   clippy:
     name: Clippy
@@ -82,7 +75,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Run clippy
-        run: cargo clippy --all-features --all-targets -- -D warnings
+        run: cargo clippy --features std,serde,fast --all-targets -- -D warnings
 
   rustfmt:
     name: Format
@@ -108,10 +101,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Build documentation
-        run: cargo doc --all-features --no-deps
+        run: cargo doc --features std,serde,fast --no-deps
 
       - name: Check for missing docs
-        run: cargo rustdoc --all-features -- -D missing-docs
+        run: cargo rustdoc --features std,serde,fast -- -D missing-docs
 
   audit:
     name: Security Audit
@@ -127,60 +120,37 @@ jobs:
       - name: Run security audit
         run: cargo audit
 
-  coverage:
-    name: Coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  # Отключаем coverage пока не настроим
+  # coverage:
+  #   name: Coverage
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: dtolnay/rust-toolchain@stable
+  #     - uses: Swatinem/rust-cache@v2
+  #     - name: Install cargo-tarpaulin
+  #       run: cargo install cargo-tarpaulin
+  #     - name: Generate coverage
+  #       run: cargo tarpaulin --all-features --out xml --timeout 120
+  #     - name: Upload to codecov.io
+  #       uses: codecov/codecov-action@v3
+  #       with:
+  #         file: cobertura.xml
+  #         fail_ci_if_error: true
 
-      - uses: dtolnay/rust-toolchain@stable
-
-      - uses: Swatinem/rust-cache@v2
-
-      - name: Install cargo-tarpaulin
-        run: cargo install cargo-tarpaulin
-
-      - name: Generate coverage
-        run: cargo tarpaulin --all-features --out xml --timeout 120
-
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v3
-        with:
-          file: cobertura.xml
-          fail_ci_if_error: true
-
-  benchmark:
-    name: Performance Benchmarks
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: dtolnay/rust-toolchain@stable
-
-      - uses: Swatinem/rust-cache@v2
-
-      - name: Install criterion
-        run: cargo install cargo-criterion
-
-      - name: Run benchmarks (baseline)
-        run: |
-          git checkout ${{ github.event.pull_request.base.sha }}
-          cargo bench --features max-performance > baseline.txt
-
-      - name: Run benchmarks (current)
-        run: |
-          git checkout ${{ github.event.pull_request.head.sha }}
-          cargo bench --features max-performance > current.txt
-
-      - name: Compare benchmarks
-        run: |
-          echo "## Benchmark Results" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          diff baseline.txt current.txt || true >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+  # Убираем benchmark из CI для начала
+  # benchmark:
+  #   name: Performance Benchmarks
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'pull_request'
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #     - uses: dtolnay/rust-toolchain@stable
+  #     - uses: Swatinem/rust-cache@v2
+  #     - name: Run benchmarks
+  #       run: cargo bench --features fast
 
   miri:
     name: Miri (Memory Safety)
@@ -211,4 +181,4 @@ jobs:
         run: cargo install cargo-minimal-versions
 
       - name: Test minimal versions
-        run: cargo minimal-versions check --all-features
+        run: cargo minimal-versions check --features std,serde
