--- a/deny.toml
+++ b/deny.toml
@@ -10,8 +10,8 @@ targets = [
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
 vulnerability = "deny"
-unmaintained = "warn"
-yanked = "warn"
+unmaintained = "workspace"
+yanked = "deny"
 notice = "warn"
 ignore = []
 
