--- a/deny.toml
+++ b/deny.toml
@@ -24,6 +24,9 @@ allow = [
     "BSD-3-Clause",
     "ISC",
     "Unicode-DFS-2016",
+    # Additional licenses needed by dependencies
+    "MPL-2.0",              # Mozilla Public License 2.0 (used by smartstring)
+    "Unicode-3.0",          # Unicode License v3 (used by unicode-ident)
 ]
 # Use exceptions for specific cases instead of global deny list
 exceptions = [
