--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,18 @@ jobs:
         with:
           key: ${{ matrix.os }}-${{ matrix.rust }}-${{ hashFiles('Cargo.toml') }}
 
+      # Set target features for ARM64 macOS to enable GxHash
+      - name: Set ARM64 target features (macOS)
+        if: runner.os == 'macOS' && runner.arch == 'ARM64'
+        run: |
+          echo "RUSTFLAGS=-C target-cpu=native -C target-feature=+aes,+neon" >> $GITHUB_ENV
+
+      # Set target features for x86_64 to enable native optimizations
+      - name: Set x86_64 target features
+        if: runner.arch == 'X64'
+        run: |
+          echo "RUSTFLAGS=-C target-cpu=native" >> $GITHUB_ENV
+
       - name: Run tests
         run: cargo test --verbose ${{ matrix.features }}
 
@@ -74,6 +86,10 @@ jobs:
           components: clippy
 
       - uses: Swatinem/rust-cache@v2
+
+      # Enable target features for clippy
+      - name: Set target features
+        run: echo "RUSTFLAGS=-C target-cpu=native" >> $GITHUB_ENV
 
       - name: Run clippy
         run: cargo clippy --features std,serde,fast --all-targets -- -D warnings
@@ -101,6 +117,10 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
+      # Enable target features for docs
+      - name: Set target features
+        run: echo "RUSTFLAGS=-C target-cpu=native" >> $GITHUB_ENV
+
       - name: Build documentation
         run: cargo doc --features std,serde,fast --no-deps
 
@@ -121,38 +141,6 @@ jobs:
       - name: Run security audit
         run: cargo audit
 
-  # Отключаем coverage пока не настроим
-  # coverage:
-  #   name: Coverage
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: dtolnay/rust-toolchain@stable
-  #     - uses: Swatinem/rust-cache@v2
-  #     - name: Install cargo-tarpaulin
-  #       run: cargo install cargo-tarpaulin
-  #     - name: Generate coverage
-  #       run: cargo tarpaulin --all-features --out xml --timeout 120
-  #     - name: Upload to codecov.io
-  #       uses: codecov/codecov-action@v3
-  #       with:
-  #         file: cobertura.xml
-  #         fail_ci_if_error: true
-
-  # Убираем benchmark из CI для начала
-  # benchmark:
-  #   name: Performance Benchmarks
-  #   runs-on: ubuntu-latest
-  #   if: github.event_name == 'pull_request'
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-  #     - uses: dtolnay/rust-toolchain@stable
-  #     - uses: Swatinem/rust-cache@v2
-  #     - name: Run benchmarks
-  #       run: cargo bench --features fast
-
   miri:
     name: Miri (Memory Safety)
     runs-on: ubuntu-latest
@@ -167,6 +155,7 @@ jobs:
 
       - name: Run miri
         run: cargo miri test --lib --features std
+
   feature-combinations:
     name: Feature Combinations
     runs-on: ubuntu-latest
@@ -176,6 +165,16 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
 
       - uses: Swatinem/rust-cache@v2
+
+      # Enable target features
+      - name: Set target features
+        run: echo "RUSTFLAGS=-C target-cpu=native" >> $GITHUB_ENV
+
+      # Install cross-compilation targets
+      - name: Install targets
+        run: |
+          rustup target add wasm32-unknown-unknown
+          rustup target add aarch64-unknown-linux-gnu
 
       - name: Install cargo-hack
         uses: taiki-e/install-action@v2
@@ -190,6 +189,13 @@ jobs:
         run: |
           cargo hack test --feature-powerset --exclude-features default
 
+      - name: Test cross-compilation
+        run: |
+          # Test WASM with no_std
+          cargo check --target=wasm32-unknown-unknown --no-default-features --features=no_std
+          # Test ARM64 Linux with basic features
+          cargo check --target=aarch64-unknown-linux-gnu --no-default-features --features=std
+
   minimal-versions:
     name: Minimal Versions
     runs-on: ubuntu-latest
@@ -199,6 +205,10 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
 
       - uses: Swatinem/rust-cache@v2
+
+      # Enable target features
+      - name: Set target features
+        run: echo "RUSTFLAGS=-C target-cpu=native" >> $GITHUB_ENV
 
       - name: Test with minimal versions (simple approach)
         run: |
