chore: release v0.1.1 - fix docs.rs build
- Fix docs.rs compilation by avoiding gxhash dependency
- Use specific features instead of all-features for docs.rs
- Update CHANGELOG.md with release notes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "domain-key"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 rust-version = "1.75"
 authors = ["vanyastaff <vanya.john.stafford@gmail.com>"]
@@ -69,7 +69,7 @@ secure = ["dep:ahash"]
 crypto = ["dep:blake3"]
 
 [package.metadata.docs.rs]
-all-features = true
+features = ["std", "serde", "secure"]
 rustdoc-args = ["--cfg", "docsrs"]
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
